# gln-setup

./: README.md  pyproject.toml  readme.md
.datalad/: config
src/gln_setup/: .cli.py.swp  .setupUtil.py.swp  cli.py  dependencySetup.py  gitSetup.py  setupUtil.py  sshSetup.py  sshconfig.py  sshconfigGPT.py
tests/: .test_setup.py.swp  test_dependencySetup.py  test_gitSetup.py  test_setup.py
